# dstv

./: .gitignore  CHANGELOG.md  Cargo.toml  GitVersion.yml  README.md  code-coverage.sh  devbox.json
.github/workflows/: build_and_test.yml  publish.yml
data/: E1.nc
src/: bend.rs  border.rs  contour.rs  cut.rs  dstv.rs  dstv_element.rs  dstv_element_type.rs  element_type.rs  header.rs  hole.rs  lib.rs  located_element.rs  numeration.rs  outer_border.rs  part_face.rs  screwed_point.rs  slot.rs
tests/: code_profile.rs  elements.rs  f64_parser.rs  flange.rs  header.rs  parse_dstv_error.rs  svg.rs
tests/data/: 0008-PL0001.NC1  0008-SE0004.nc1  0008-SE0008.nc1  0008-SE0009.nc1  P1.nc  P1565.nc  P1719.nc  P1728.nc  P1730.nc  P2663.nc  P2683.nc  P2684.nc  P465.nc  RST37-2.nc  product2.NC1  product3.NC1
