[package]
name = "dstv"
version = "0.1.0"
authors = ["Thomas Luijken <dstv@luijkamp.nl>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tluijken/dstv"
documentation = "https://docs.rs/dstv"
homepage = "https://github.com/tluijken/dstv"
description = """
DSTV is a Rust library for parsing DSTV files and visualizing the parsed data.
"""
keywords = ["dstv", "tekla", "steel", "visualization", "parser"]
categories = ["parsing", "visualization", "geometry", "2d"]
autobenches = true
edition = "2021"
rust-version = "1.56"
include = ["src/", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
